--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -4,7 +4,7 @@
 	gap: 2rem;
 	grid-template-columns: 1fr 42rem 1fr;
 	grid-template-rows: auto 1fr;
-	height: 100vh;
+	min-height: 100vh;
 }
 
 .topbar {
@@ -50,7 +50,7 @@
 @media (min-width: 767px) {
 	.aside {
 		z-index: 21;
-		max-width: 16rem;
+		margin-right: 1.25rem;
 	}
 
 	.recipeGrid {
@@ -61,6 +61,7 @@
 @media (max-width: 768px) {
 	.main {
 		grid-template-columns: 1fr;
+		gap: 0;
 	}
 
 	.topbar,
@@ -68,5 +69,10 @@
 	.content {
 		grid-column: auto;
 		grid-row: auto;
+	}
+
+	.recipeGrid {
+		padding-left: 1rem;
+		padding-right: 1rem;
 	}
 }
