--- a/src/styles/components/topbar.module.css
+++ b/src/styles/components/topbar.module.css
@@ -54,3 +54,24 @@
 	height: 3.75rem;
 	background-color: var(--color-primary);
 }
+
+@media (max-width: 768px) {
+	.topbarLogoShape {
+		width: 6rem;
+	}
+
+	.topbarLogoImg {
+		height: 4rem;
+		width: 4rem;
+	}
+
+	.topbar {
+		top: 1.25rem;
+		gap: 0.75rem;
+		margin-bottom: -0.5rem;
+	}
+
+	.topbar::after {
+		height: 2.5rem;
+	}
+}
